# satisfactory-monitor

./: Cargo.toml
src/: main.rs  prod.rs
src/prod/: power.rs
