[package]
name = "satisfactory-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.20"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
rerun = { version = "0.19.1", features = ["clap"] }
serde = "1.0.215"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
